k8s/ingress/wolfcode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolfcode-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s.wolfcode.cn 
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
        path: /so
